--- a/core/templates/parciais/_navbar.html
+++ b/core/templates/parciais/_navbar.html
@@ -1,6 +1,6 @@
 {%load static%}
 <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between fixed-top">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="{% url 'receita:index' %}">
         <img src="{% static 'imgs/cookit_logo.svg' %}" alt="Logo" height="36px">
     </a>
     <form class="form-inline <!--mr-auto my-2 my-lg-0-->">
