--- a/core/templates/receita/receita-completa.html
+++ b/core/templates/receita/receita-completa.html
@@ -17,7 +17,8 @@
                 <div id="thumbnails-receita-completa" class="col">
                     <div class="row">
                         {% if ingrediente.fotos %}
-                        <img style="width:25%" src="{{ ingrediente.fotos.url }}" alt="{{ ingrediente.nome_receita }}">
+                        <img class="receita-foto rounded-circle" style="width:25%" src="{{ ingrediente.fotos.url }}"
+                            alt="{{ ingrediente.nome_receita }}"></img>
                         {% endif %}
                     </div>
                 </div>
@@ -33,23 +34,19 @@
                 <div id="icones-receita-completa" class="col">
                     <div class="icon-text-receita-completa">
                         <i class="far fa-clock"></i>
-                        <br>
-
-                        {% if ingrediente.tempo_preparo <= 1 %}
+                        <br> {% if ingrediente.tempo_preparo <= 1 %}
                         <p>{{ingrediente.tempo_preparo}} {{ingrediente.get_tempo_unidade_medida_display}}</p>
-                        {%else%}
+                        {% else %}
                         <p>{{ingrediente.tempo_preparo}} {{ingrediente.get_tempo_unidade_medida_display}}s</p>
-                        {%endif%}
-
+                        {% endif %}
                     </div>
                     <div class="line-receita-completa"></div>
                     <div class="icon-text-receita-completa">
                         <i class="fas fa-concierge-bell"></i>
-                        <br>
-                        {% if ingrediente.porcoes <= 1 %}
-                        <p>{{ingrediente.porcoes}} porção</p>
+                        <br> {% if ingrediente.porcoes <= 1 %}
+                        <p>{{ingrediente.porcoes}} Porção</p>
                         {% else %}
-                        <p>{{ingrediente.porcoes}} porções</p>
+                        <p>{{ingrediente.porcoes}} Porções</p>
                         {% endif %}
                     </div>
                     <div class="line-receita-completa"></div>
@@ -86,7 +83,6 @@
                     <!-- TODO: CSS alinhar ingredientes lado a lado, e tamanho de tags de acordo com seu contéudo -->
                     <ul>
                         {% for ingrediente in ingrediente.ingrediente_set.all %}
-
                         {%if ingrediente.unidadeMedida == 'AGS' %}
                         <li style="margin-bottom: 10px; padding:4px;">
                             <strong style="color: #F0A916;">{{ingrediente.nome_ingrediente}}</strong>
@@ -98,18 +94,14 @@
                             {{ingrediente.quantidade}} {{ingrediente.get_unidadeMedida_display}} de
                             <strong style="color: #F0A916;">{{ingrediente.nome_ingrediente}}</strong>
                         </li>
-                        {%endif%}
-
-                        {% endfor %}
+                        {%endif%} {% endfor %}
                     </ul>
 
                 </div>
 
                 <div id="modo-de-preparo-receita-completa" class="col">
                     <h3>Modo de Preparo</h3>
-                    <ol>
-                        <li>{{ingrediente.modo_preparo}}</li>
-                    </ol>
+                    <p>{{ingrediente.modo_preparo}}</p>
                 </div>
             </div>
             <div class="row">
