--- a/core/static/custom/css/style.css
+++ b/core/static/custom/css/style.css
@@ -551,14 +551,14 @@ hr {
 }
 
 .container {
-    border-left: 1px solid grey;
-    border-right: 1px solid grey;
+    border-left: 1px solid #707070;
+    border-right: 1px solid #707070;
 }
 
 #receita-receita-completa {
-    border: 1px solid grey;
+    border: 1px solid #707070;
     border-radius: 1em;
-    background-color: darkgray;
+    background-color: #F3EFEF;
 }
 
 #dados-receita-completa,
@@ -573,26 +573,26 @@ hr {
 #titulo-receita-completa {
     text-align: center;
 }
+#titulo-receita-completa h3{
+    color: #ABA11B;
+}
 
 #opcoes-receita-completa {
     text-align: right;
 }
 
 #icones-receita-completa {
-    border: 1px solid grey;
-    background-color: darkgray;
+    border: 1px solid #707070;
+    background-color: #F3EFEF;
     border-radius: 1em;
-    margin: 1em;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 1em;
 }
 
 .icon-text-receita-completa {
     text-align: center;
-    padding-left: 1em;
-    padding-right: 1em;
     max-width: 7em;
 }
 
@@ -629,8 +629,8 @@ hr {
 }
 
 #modo-de-preparo-receita-completa p {
-    border: 1px solid grey;
-    background-color: darkgray;
+    border: 1px solid #707070;
+    background-color: #F3EFEF;
     border-radius: 1em;
     list-style-type: decimal;
     font-size: 12px;
@@ -646,7 +646,7 @@ textarea {
 
 #usuario-receita-completa,
 #obad-receita-completa {
-    border: 1px solid grey;
+    border: 1px solid #707070;
     border-radius: 1em;
     padding: 1em;
 }
@@ -667,7 +667,11 @@ textarea {
 
 .line-receita-completa {
     border-left: 1px solid black;
-    height: 80%;
+    height: 65px;
+    width: 16.6%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .fa-star {
@@ -682,5 +686,5 @@ textarea {
     width: 120px;
     height: 120px;
     margin-bottom: 1rem;
-    border: 1px solid gray;
+    border: 1px solid #707070;
 }
