--- a/core/templates/parciais/_navbar.html
+++ b/core/templates/parciais/_navbar.html
@@ -6,6 +6,7 @@
     <form class="form-inline <!--mr-auto my-2 my-lg-0-->">
         <div id="search" class="input-group">
             <input id="search-input" class="form-control" type="search" placeholder="Search" aria-label="Search">
+            <!--TODO: corrigir bordar do botão (CSS)-->
             <button id="search-button" class="btn btn-success" type="submit">
                 <i class="fas fa-search"></i>
             </button>
