--- a/core/templates/receita/receita-completa.html
+++ b/core/templates/receita/receita-completa.html
@@ -123,6 +123,7 @@
 
                 <div id="modo-de-preparo-receita-completa" class="col">
                     <h3>Modo de Preparo</h3>
+                    <!--TODO: adicionar barra de rolagem-->
                     <p>{{ingrediente.modo_preparo}}</p>
                 </div>
 
