--- a/core/templates/parciais/_navbar.html
+++ b/core/templates/parciais/_navbar.html
@@ -44,16 +44,19 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+
+                <a class="nav-link" href="{% url 'usuario:criar' %}" id="navbarDropdown" role="button"
                     aria-haspopup="true" aria-expanded="false">
                     <img src="{% static 'imgs/cookit_user.svg' %}" alt="" height="20px">
                 </a>
+
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Action</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
                 </div>
+
             </li>
         </ul>
     </div>
