--- a/core/templates/usuario/cadastro-editar_usuario.html
+++ b/core/templates/usuario/cadastro-editar_usuario.html
@@ -3,49 +3,59 @@
 <!-- tag necessária para usar forms do django -->
 {% load crispy_forms_tags %}
 
+{% include 'parciais/_navbar.html' %}
 
-<div class="row">
+<div class="container">
+    <div class="row">
 
-    {% if not request.user.is_authenticated %}
-    <div class="col-lg mt-3">
-        <h4>Login</h4>
-        <p>Se você já fez cadastro, basta entrar com seu usuário e senha abaixo:</p>
-
-
-        <form method="POST" action="">
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="InputUsuario1">Usuário:</label>
-                <input type="text" name='username' class="form-control" id="InputUsuario1"
-                    aria-describedby="usuarioHelp" placeholder="Digite seu usuário:">
-            </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Senha:</label>
-                <input name='password' type="password" class="form-control" id="exampleInputPassword1"
-                    placeholder="Digite sua senha:">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-
-
-    </div>
-    {% endif %}
-
-    <div class="col-lg mt-3">
-
-        <form method="POST" action="">
-            {% csrf_token %}
-
-            {{ usuarioform|crispy }}
-
-            <div class="row">
-                <div class="col">
-                    <button type="submit" class="btn btn-primary btn-block btn-lg">
-                        Enviar
-                    </button>
+        {% if not request.user.is_authenticated %}
+        <div class="col-lg mt-3">
+            <h3>Login</h3>
+            <p>Se você já fez cadastro, basta entrar com seu usuário e senha abaixo:</p>
+    
+    
+            <form method="POST" action="{% url 'usuario:login' %}">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="InputUsuario1">Usuário:</label>
+                    <input type="text" name='username' class="form-control" id="InputUsuario1"
+                        aria-describedby="usuarioHelp" placeholder="Digite seu usuário:">
                 </div>
-            </div>
-        </form>
-
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Senha:</label>
+                    <input name='password' type="password" class="form-control" id="exampleInputPassword1"
+                        placeholder="Digite sua senha:">
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <button type="submit" class="btn btn-primary btn-block btn-lg">
+                            Login
+                        </button>
+                    </div>
+                </div>
+            </form>
+    
+    
+        </div>
+        {% endif %}
+    
+        <div class="col-lg mt-3">
+    
+            <form method="POST" action="">
+                {% csrf_token %}
+                <h3>Cadastro</h3>
+                {{ usuarioform|crispy }}
+    
+                <div class="row">
+                    <div class="col">
+                        <button type="submit" class="btn btn-primary btn-block btn-lg">
+                            Enviar
+                        </button>
+                    </div>
+                </div>
+            </form>
+    
+        </div>
     </div>
 </div>
+
