--- a/core/templates/receita/receita-completa.html
+++ b/core/templates/receita/receita-completa.html
@@ -17,8 +17,8 @@
                 <div id="thumbnails-receita-completa" class="col">
                     <div class="row">
                         {% if ingrediente.fotos %}
-                        <img class="receita-foto rounded-circle" style="max-width:800px" src="{{ ingrediente.fotos.url }}"
-                            alt="{{ ingrediente.nome_receita }}"></img>
+                        <img class="receita-foto rounded-circle" style="max-width:800px"
+                            src="{{ ingrediente.fotos.url }}" alt="{{ ingrediente.nome_receita }}"></img>
                         {% endif %}
                     </div>
                 </div>
@@ -32,148 +32,152 @@
             </div>
             <div class="col-md">
 
-            <div class="row">
-                <div class="col mb-3">
-                    <div id="icones-receita-completa" class="col">
-                        
-                        <div class="line-receita-completa" class="col" style="border: none;">
-                            <div class="icon-text-receita-completa">
-                                <i class="far fa-clock"></i>
-                                <br> {% if ingrediente.tempo_preparo <= 1 %}
-                                <p>{{ingrediente.tempo_preparo}} {{ingrediente.get_tempo_unidade_medida_display}}</p>
-                                {% else %}
-                                <p>{{ingrediente.tempo_preparo}} {{ingrediente.get_tempo_unidade_medida_display}}s</p>
-                                {% endif %}
+                <div class="row">
+                    <div class="col mb-3">
+                        <div id="icones-receita-completa" class="col">
+
+                            <div class="line-receita-completa" class="col" style="border: none;">
+                                <div class="icon-text-receita-completa">
+                                    <i class="far fa-clock"></i>
+                                    <br> {% if ingrediente.tempo_preparo <= 1 %}
+                                    <p>{{ingrediente.tempo_preparo}} {{ingrediente.get_tempo_unidade_medida_display}}
+                                    </p>
+                                    {% else %}
+                                    <p>{{ingrediente.tempo_preparo}} {{ingrediente.get_tempo_unidade_medida_display}}s
+                                    </p>
+                                    {% endif %}
+                                </div>
                             </div>
-                        </div>
-                        
-                        <div class="line-receita-completa" class="col">
-                            <div class="icon-text-receita-completa">
-                                <i class="fas fa-concierge-bell"></i>
-                                <br> {% if ingrediente.porcoes <= 1 %}
-                                <p>{{ingrediente.porcoes}} Porção</p>
-                                {% else %}
-                                <p>{{ingrediente.porcoes}} Porções</p>
-                                {% endif %}
+
+                            <div class="line-receita-completa" class="col">
+                                <div class="icon-text-receita-completa">
+                                    <i class="fas fa-concierge-bell"></i>
+                                    <br> {% if ingrediente.porcoes <= 1 %}
+                                    <p>{{ingrediente.porcoes}} Porção</p>
+                                    {% else %}
+                                    <p>{{ingrediente.porcoes}} Porções</p>
+                                    {% endif %}
+                                </div>
                             </div>
-                        </div>
-                        
-                        <div class="line-receita-completa" class="col">
-                            <div class="icon-text-receita-completa">
-                                <i class="fas fa-burn"></i>
-                                <br>
-                                <p>Dificuldade: {{ingrediente.get_dificuldade_display}}</p>
+
+                            <div class="line-receita-completa" class="col">
+                                <div class="icon-text-receita-completa">
+                                    <i class="fas fa-burn"></i>
+                                    <br>
+                                    <p>Dificuldade: {{ingrediente.get_dificuldade_display}}</p>
+                                </div>
                             </div>
-                        </div>
-                        
 
-                        <div class="line-receita-completa" class="col">
-                            <div class="icon-text-receita-completa">
-                                <i class="far fa-heart"></i>
-                                <br>
-                                <p>Favoritos</p>
+
+                            <div class="line-receita-completa" class="col">
+                                <div class="icon-text-receita-completa">
+                                    <i class="far fa-heart"></i>
+                                    <br>
+                                    <p>Favoritos</p>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="line-receita-completa" class="col">
-                            <div class="icon-text-receita-completa">
-                                <i class="far fa-comment-alt"></i>
-                                <br>
-                                <p>Comentários</p>
+                            <div class="line-receita-completa" class="col">
+                                <div class="icon-text-receita-completa">
+                                    <i class="far fa-comment-alt"></i>
+                                    <br>
+                                    <p>Comentários</p>
+                                </div>
                             </div>
-                        </div>
-                        
-                        <div class="line-receita-completa" class="col">
-                            <div class="icon-text-receita-completa">
-                                <i class="far fa-calendar-alt"></i>
-                                <br>
-                                <p>{{ingrediente.data_publicacao}}</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                
-            </div>
 
-
-            <div class="row mb-3">
-
-                <div id="ingredientes-receita-completa" class="col">
-                    <h3>Ingredientes</h3>
-
-                    <div id="alinhamento-ingredientes">
-
-                        {% for ingrediente in ingrediente.ingrediente_set.all %}
-                        {%if ingrediente.unidadeMedida == 'AGS' %}
-                        <p style="margin-bottom: 10px; padding:5px;">
-                            <strong style="color: #F0A916;">{{ingrediente.nome_ingrediente}}</strong>
-                            {{ingrediente.get_unidadeMedida_display}}
-
-                        </p>
-                        {%else%}
-                        <p style="margin-bottom: 10px; padding:5px;">
-                            {{ingrediente.quantidade}} {{ingrediente.get_unidadeMedida_display}} de
-                            <strong style="color: #F0A916;">{{ingrediente.nome_ingrediente}}</strong>
-                        </p>
-                        {%endif%} {% endfor %}
-                    </div>
-                        
-
-                </div>
-
-                <div id="modo-de-preparo-receita-completa" class="col">
-                    <h3>Modo de Preparo</h3>
-                    <!--TODO: adicionar barra de rolagem-->
-                    <p>{{ingrediente.modo_preparo}}</p>
-                </div>
-
-            </div>
-
-            <div class="row">
-
-                <div class="col">
-                    <h3>Observações Adicionais</h3>
-                    <div id="obad-receita-completa">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eu dapibus eros, at
-                            interdum
-                            odio. Integer at enim eu ligula fermentum gravida. Pellentesque non odio a diam accumsan
-                            blandit accumsan vitae lectus. Etiam vitae placerat
-                            justo. Etiam vel volutpat nisi. Fusce eleifend arcu vel consequat vestibulum. Aliquam
-                            vulputate hendrerit tincidunt. Nulla in porta nunc, nec pulvinar lacus. Nullam vel eros
-                            justo. Phasellus quis lacus vel velit mollis bibendum.
-                            Etiam volutpat enim non gravida maximus.
-                        </p>
-                    </div>
-                </div>
-                <div class="col">
-                    <h3>Chef</h3>
-                    <div id="usuario-receita-completa">
-                        <div id="dados-usuario-receita-completa" class="row">
-                            <i class="fas fa-user-circle col-2"></i>
-                            <div class="col">
-                                <h4>{{ingrediente.dono_receita}}</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eu dapibus eros, at
-                                    interdum odio. Integer at enim eu ligula fermentum gravida.
-                                </p>
-                            </div>
-                        </div>
-                        <div id="icones-usuario-receita-completa" class="row">
-                            <div class="col">
-                                <i class="far fa-images"></i>
-                            </div>
-                            <div class="col">
-                                <i class="fas fa-book"></i>
-                                <p>Receitas</p>
-                            </div>
-                            <div class="col">
-                                <i class="far fa-heart"></i>
-                                <p>Favoritos</p>
+                            <div class="line-receita-completa" class="col">
+                                <div class="icon-text-receita-completa">
+                                    <i class="far fa-calendar-alt"></i>
+                                    <br>
+                                    <p>{{ingrediente.data_publicacao}}</p>
+                                </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
 
-            </div>
+
+                <div class="row mb-3">
+
+                    <div id="ingredientes-receita-completa" class="col">
+                        <h3>Ingredientes</h3>
+
+                        <div id="alinhamento-ingredientes">
+
+                            {% for ingrediente in ingrediente.ingrediente_set.all %}
+                            {%if ingrediente.unidadeMedida == 'AGS' %}
+                            <p style="margin-bottom: 10px; padding:5px;">
+                                <strong style="color: #F0A916;">{{ingrediente.nome_ingrediente}}</strong>
+                                {{ingrediente.get_unidadeMedida_display}}
+
+                            </p>
+                            {%else%}
+                            <p style="margin-bottom: 10px; padding:5px;">
+                                {{ingrediente.quantidade}} {{ingrediente.get_unidadeMedida_display}} de
+                                <strong style="color: #F0A916;">{{ingrediente.nome_ingrediente}}</strong>
+                            </p>
+                            {%endif%} {% endfor %}
+                        </div>
+
+
+                    </div>
+
+                    <div id="modo-de-preparo-receita-completa" class="col">
+                        <h3>Modo de Preparo</h3>
+                        <!--TODO: adicionar barra de rolagem-->
+                        
+                        <p>{{ingrediente.modo_preparo}}</p>
+                    </div>
+
+                </div>
+
+                <div class="row">
+
+                    <div class="col">
+                        <h3>Observações Adicionais</h3>
+
+                        <div id="obad-receita-completa" >
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eu dapibus eros, at
+                                interdum
+                                odio. Integer at enim eu ligula fermentum gravida. Pellentesque non odio a diam accumsan
+                                blandit accumsan vitae lectus. Etiam vitae placerat
+                                justo. Etiam vel volutpat nisi. Fusce eleifend arcu vel consequat vestibulum. Aliquam
+                                vulputate hendrerit tincidunt. Nulla in porta nunc, nec pulvinar lacus. Nullam vel eros
+                                justo. Phasellus quis lacus vel velit mollis bibendum.
+                                Etiam volutpat enim non gravida maximus.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <h3>Chef</h3>
+                        <div id="usuario-receita-completa">
+                            <div id="dados-usuario-receita-completa" class="row">
+                                <i class="fas fa-user-circle col-2"></i>
+                                <div class="col">
+                                    <h4>{{ingrediente.dono_receita}}</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eu dapibus eros, at
+                                        interdum odio. Integer at enim eu ligula fermentum gravida.
+                                    </p>
+                                </div>
+                            </div>
+                            <div id="icones-usuario-receita-completa" class="row">
+                                <div class="col">
+                                    <i class="far fa-images"></i>
+                                </div>
+                                <div class="col">
+                                    <i class="fas fa-book"></i>
+                                    <p>Receitas</p>
+                                </div>
+                                <div class="col">
+                                    <i class="far fa-heart"></i>
+                                    <p>Favoritos</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
 
             </div>
 
