--- a/core/templates/receita/receita-completa.html
+++ b/core/templates/receita/receita-completa.html
@@ -101,7 +101,7 @@
                 <div class="row mb-3">
 
                     <div id="ingredientes-receita-completa" class="col">
-                        <h3>Ingredientes</h3>
+                        <h3>Ingredientes ( <!--TODO: Implementar renderização de quantidade de ingredientes-->)</h3>
 
                         <div id="alinhamento-ingredientes">
 
@@ -125,7 +125,6 @@
 
                     <div id="modo-de-preparo-receita-completa" class="col">
                         <h3>Modo de Preparo</h3>
-                        <!--TODO: adicionar barra de rolagem-->
                         
                         <p>{{ingrediente.modo_preparo}}</p>
                     </div>
