--- a/core/static/custom/css/style.css
+++ b/core/static/custom/css/style.css
@@ -85,6 +85,7 @@ i {
 */
 
 .container {
+    border: none !important;
     padding-top: 4rem;
     padding-bottom: 4rem;
     background-color: white;
@@ -489,10 +490,6 @@ ul li {
     color: orange;
 }
 
-.col h5 {
-    color: yellowgreen;
-}
-
 #keywords {
     padding: 1em 1em 0 1em;
     border-bottom: 1px solid black;
@@ -517,11 +514,11 @@ ul li {
 
 .card-title {
     display: -webkit-box;
-    -webkit-line-clamp: 1;
+    /*-webkit-line-clamp: 1;*/
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    color: yellowgreen;
+    color: #ABA11B;
     font-weight: bold;
     text-align: center;
 }
@@ -625,13 +622,18 @@ hr {
     border-radius: 1em;
     display: flex;
     flex-wrap: wrap;
+    padding: 8px;
 }
 
 #alinhamento-ingredientes p {
-    margin: 1em;
+    margin: 5px;
+    margin-bottom: 10px;
+    padding: 5px;
+    padding-left: 8px;
+    padding-right: 8px;
     font-size: 12px;
     display: inline-block;
-    border: 1px solid black;
+    border: 1px solid #707070;
     border-radius: 1.5em;
     height: 28px;
 }
