--- a/core/templates/parciais/_navbar.html
+++ b/core/templates/parciais/_navbar.html
@@ -1,5 +1,5 @@
 {%load static%}
-<nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between fixed-top">
+<nav class="navbar navbar-expand-lg d-flex justify-content-between fixed-top">
     <a class="navbar-brand" href="{% url 'receita:index' %}">
         <img src="{% static 'imgs/cookit_logo.svg' %}" alt="Logo" height="36px">
     </a>
@@ -12,7 +12,8 @@
             </button>
         </div>
     </form>
-    <div class="" id="navbarSupportedContent">
+    <!--TODO: dar um jeito de aumentar o tamanho dos icones-->
+    <div id="navbarSupportedContent">
         <ul class="nav">
             <li class="nav-item dropdown">
                 <a class="nav-link" href="#" role="button">
