--- a/core/templates/parciais/_navbar.html
+++ b/core/templates/parciais/_navbar.html
@@ -12,8 +12,7 @@
             </button>
         </div>
     </form>
-    <!--TODO: dar um jeito de aumentar o tamanho dos icones-->
-    <div id="navbarSupportedContent">
+    <div class="" id="navbarSupportedContent">
         <ul class="nav">
             <li class="nav-item dropdown">
                 <a class="nav-link" href="#" role="button">
