--- a/core/templates/parciais/_sidebar.html
+++ b/core/templates/parciais/_sidebar.html
@@ -2,7 +2,7 @@
     <!-- deixar responsiva -->
     <div id="order-by">
         <div class="form-group">
-            <label class="input-group-text">Ordenar:</label>
+            <label class="input-group-text input-label-sidebar">Ordenar:</label>
             <select class="form-control custom-select">
                 <option>Nome</option>
                 <option>Visualizações</option>
@@ -11,7 +11,7 @@
                 <option>Mais antigo</option>
             </select>
         </div>
-        <h4 class="stars">
+        <h4 class="stars-sidebar">
             <span class="fa fa-star"></span>
             <span class="fa fa-star"></span>
             <span class="fa fa-star"></span>
@@ -21,15 +21,15 @@
     </div>
     <div id="intel">
         <div class="form-group">
-            <label class="input-group-text">Porções</label>
+            <label class="input-group-text input-label-sidebar">Porções</label>
             <input class="form-control" id="portions" type="number" min="1">
         </div>
         <div class="form-group">
-            <label class="input-group-text">Tmp de prep</label>
+            <label class="input-group-text input-label-sidebar">Tmp de prep</label>
             <input id="prep-time" type="time" class="form-control">
         </div>
         <div class="form-group">
-            <label class="input-group-text">Dificuldade</label>
+            <label class="input-group-text input-label-sidebar">Dificuldade</label>
             <select id="difficulty" class="form-control custom-select">
                 <option id="easy" value="1">Fácil</option>
                 <option id="medium" value="2">Médio</option>
