--- a/core/templates/receita/index.html
+++ b/core/templates/receita/index.html
@@ -20,8 +20,8 @@
                 <a href="{{ receita.slug }}">
                     <h5 class="card-title">{{ receita.nome_receita }}</h5>
                 </a>
-                <p class="card-text">Publicado por <a style="font-size: 10px;"
-                            href="#">{{ receita.dono_receita }}</a>
+                <p class="card-text">Publicado por <a
+                             style="font-size: 10px;" href="">{{ receita.dono_receita }}</a>
                 </p>
                 <p class="card-text">
                     <i class="fa fa-star"></i>
@@ -38,7 +38,7 @@
                     <div class="info-tela-inicial col">
                         <div class="row">
                             <div class="col">
-                                <!--TODO: dar um jeito de aumentos esses icones-->
+                            <!--TODO: dar um jeito de aumentos esses icones-->
                                 <i class="far fa-clock"></i>
                                 <p>{{ receita.tempo_preparo }} minutos</p>
                             </div>
