--- a/core/templates/receita/receita-completa.html
+++ b/core/templates/receita/receita-completa.html
@@ -102,20 +102,18 @@
                 <div class="row mb-3">
 
                     <div id="ingredientes-receita-completa" class="col">
-                        <h3>Ingredientes ( <!--TODO: Implementar renderização de quantidade de ingredientes-->)</h3>
+                        <h3>Ingredientes ({{ ingrediente.ingrediente_set.all|length }})</h3>
 
                         <div id="alinhamento-ingredientes">
-
                             {% for ingrediente in ingrediente.ingrediente_set.all %}
                             {%if ingrediente.unidadeMedida == 'AGS' %}
                             <p>
                                 <strong style="color: #F0A916;">{{ingrediente.nome_ingrediente}}</strong>
                                 <strong>{{ingrediente.get_unidadeMedida_display}}</strong>
-
                             </p>
                             {%else%}
                             <p>
-                                <strong>{{ingrediente.quantidade}} {{ingrediente.get_unidadeMedida_display}} de</strong>
+                                <strong>{{ingrediente.quantidade}} {{ingrediente.get_unidadeMedida_display}}</strong> de
                                 <strong style="color: #F0A916;">{{ingrediente.nome_ingrediente}}</strong>
                             </p>
                             {%endif%} {% endfor %}
