Django messages corrigido

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -19,6 +19,7 @@
                 <input type="text" class="form-control rounded-pill" placeholder="Quero que não tenha">
             </div>
         </div>
+        {%include 'parciais/_messages.html'%}
         <!--Depois substituir por um block de conteudo-->
         {% block miniatura_receita %}
             
