--- a/core/templates/receita/index.html
+++ b/core/templates/receita/index.html
@@ -38,12 +38,11 @@
                     <div class="info-tela-inicial col">
                         <div class="row">
                             <div class="col">
-                            <!--TODO: dar um jeito de aumentos esses icones-->
-                                <i class="far fa-clock"></i>
+                                <i style="font-size: 25px;" class="far fa-clock"></i>
                                 <p>{{ receita.tempo_preparo }} minutos</p>
                             </div>
                             <div class="col">
-                                <i class="fas fa-concierge-bell"></i>
+                                <i style="font-size: 25px;" class="fas fa-concierge-bell"></i>
                                 <p>{{ receita.porcoes }} porções</p>
                             </div>
                         </div>
