--- a/core/templates/parciais/_messages.html
+++ b/core/templates/parciais/_messages.html
@@ -1,8 +1,8 @@
 {% if messages %}
     <br>
     {% for message in messages %}
-        <div class="alert {{ messages.tags }}" role="alert">
+        <div class="alert {{ message.tags }}" role="alert">
             {{ message }}
         </div>
     {% endfor %}
-{% endif %}
+{% endif %} 
