--- a/core/templates/parciais/_navbar.html
+++ b/core/templates/parciais/_navbar.html
@@ -6,7 +6,6 @@
     <form class="form-inline <!--mr-auto my-2 my-lg-0-->">
         <div id="search" class="input-group">
             <input id="search-input" class="form-control" type="search" placeholder="Search" aria-label="Search">
-            <!--TODO: corrigir bordar do botão (CSS)-->
             <button id="search-button" class="btn btn-success" type="submit">
                 <i class="fas fa-search"></i>
             </button>
@@ -16,13 +15,13 @@
         <ul class="nav">
             <li class="nav-item dropdown">
                 <a class="nav-link" href="#" role="button">
-                    <h5><i class="fas fa-book"></i></h5>
+                    <h5><i style="font-size: 25px;" class="fas fa-book"></i></h5>
                 </a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
-                    <h5><i class="fas fa-bell"></i></h5>
+                    <h5><i style="font-size: 25px;" class="fas fa-bell"></i></h5>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Action</a>
@@ -34,7 +33,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
-                    <h5><i class="fas fa-heart"></i></h5>
+                    <h5><i style="font-size: 25px;" class="fas fa-heart"></i></h5>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Action</a>
@@ -47,7 +46,7 @@
 
                 <a class="nav-link" href="{% url 'usuario:criar' %}" id="navbarDropdown" role="button"
                     aria-haspopup="true" aria-expanded="false">
-                    <img src="{% static 'imgs/cookit_user.svg' %}" alt="" height="20px">
+                    <img src="{% static 'imgs/cookit_user.svg' %}" alt="" height="25px">
                 </a>
 
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
