--- a/core/static/custom/css/style.css
+++ b/core/static/custom/css/style.css
@@ -427,8 +427,7 @@ ul li {
     border-left: 1px solid gray;
 }
 
-.see-more-tela-inicial,
-.see-more-tela-inicial:hover {
+.see-more-tela-inicial {
     width: 100%;
     align-self: center;
     /*    border-radius: 1em 1em 0 0 !important; */
@@ -440,6 +439,11 @@ ul li {
     background-color: lightgray;
     color: black;
     /*    font-size: 1.5em; */
+}
+
+.see-more-tela-inicial:hover {
+    background-color: gray;
+    border-color: black;
 }
 
 .info-tela-inicial {
@@ -458,7 +462,7 @@ ul li {
 .card-img-top {
     object-fit: cover;
     object-position: center;
-    max-height: 180px;
+    height: 180px;
     border-top-left-radius: .50em;
     border-top-right-radius: .50em;
 }
@@ -600,6 +604,11 @@ hr {
     height: 28px;
 }
 
+#alinhamento-ingredientes p::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
 #modo-de-preparo-receita-completa p {
     border: 1px solid #707070;
     background-color: #F3EFEF;
@@ -615,6 +624,33 @@ hr {
     min-height: 120px;
     max-height: 240px;
     overflow: auto;
+}
+
+#alinhamento-ingredientes::-webkit-scrollbar,
+#modo-de-preparo-receita-completa p::-webkit-scrollbar {
+    width: 1.5em;
+}
+
+
+/* Handle */
+
+#alinhamento-ingredientes::-webkit-scrollbar-thumb,
+#modo-de-preparo-receita-completa p::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 1em;
+    border: 0.5em solid transparent;
+    background-clip: content-box;
+}
+
+
+/* Handle on hover */
+
+#alinhamento-ingredientes::-webkit-scrollbar-thumb:hover,
+#modo-de-preparo-receita-completa p::-webkit-scrollbar-thumb:hover {
+    background: #444;
+    border-radius: 1em;
+    border: 0.5em solid transparent;
+    background-clip: content-box;
 }
 
 textarea {
@@ -667,3 +703,6 @@ textarea {
     margin-bottom: 1rem;
     border: 1px solid #707070;
 }
+
+
+/* scrollbar */
